--- a/src/projects/Project.module.css
+++ b/src/projects/Project.module.css
@@ -1,5 +1,5 @@
 .project {
-    width: 450px;
+    width: 350px;
     background-color: #b9b9b9;
     display: flex;
     flex-direction: column;
@@ -8,12 +8,21 @@
 }
 
 .image {
-    width: 450px;
-    height: 450px;
+    width: 100%;
+    height: 350px;
     background-color: whitesmoke;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.btn {
+    width: 70px;
+    height: 30px;
+    border: 1px solid black;
+    color: black;
+    text-decoration: none;
+    line-height: 30px;
 }
 
 .title {
