--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-    height: 200px;
     background-color: #d2ffc5;
+    padding: 50px 0;
 }
 
 .footerContainer {
@@ -9,7 +9,7 @@
 }
 
 .linksBlock {
-    width: 600px;
+    width: 280px;
     background-color: whitesmoke;
     display: flex;
     justify-content: space-between;
