--- a/src/contact/Contact.module.css
+++ b/src/contact/Contact.module.css
@@ -1,6 +1,6 @@
 .contactBlock {
-    height: 100vh;
     background-color: #ffc5c5;
+    padding: 50px 0;
 }
 
 .contactContainer {
@@ -9,7 +9,7 @@
 }
 
 .form {
-    width: 600px;
+    width: 280px;
     height: 300px;
     background-color: whitesmoke;
     display: flex;
