add styles and media

--- a/src/common/styles/Container.module.scss
+++ b/src/common/styles/Container.module.scss
@@ -7,4 +7,8 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+
+    @media screen and(max-width: 1057px){
+        justify-content: center;
+    }
 }
