--- a/src/common/styles/sass/variables.scss
+++ b/src/common/styles/sass/variables.scss
@@ -2,3 +2,6 @@ $textColor: #fff;
 $primaryColor: #ffc107;
 $bgColor: #141414;
 $bgSecondColor: #252525;
+
+$fontFamily: 'Poppins', sans-serif;
+$primaryFontFamily: 'Open Sans', sans-serif;
