--- a/src/footer/Footer.module.scss
+++ b/src/footer/Footer.module.scss
@@ -1,4 +1,5 @@
 @import './src/common/styles/sass/variables';
+@import './src/common/styles/sass/mixins';
 
 .footer {
     background-color: $bgColor;
@@ -9,32 +10,24 @@
         justify-content: flex-start;
 
         h2 {
-            font-family: 'Poppins', sans-serif;
-            color: $textColor;
-            font-size: 20px;
-            font-weight: 700;
+            @include text($fontFamily, 20px, 700, $textColor);
             text-transform: uppercase;
             text-align: center;
             margin: 0;
             justify-content: center;
-
         }
 
         .linksBlock {
+            @include flex(flex, space-between);
             width: 280px;
             background-color: $bgColor;
-            display: flex;
-            justify-content: space-between;
             flex-wrap: wrap;
             margin-top: 30px;
         }
 
         p {
+            @include text($primaryFontFamily, 15px, 500, $textColor);
             margin: 25px 0 0 0;
-            font-family: 'Open Sans', sans-serif;
-            font-size: 15px;
-            color: #fff;
-            font-weight: 500;
         }
     }
 }
