--- a/src/footer/Link.module.scss
+++ b/src/footer/Link.module.scss
@@ -1,12 +1,12 @@
 @import './src/common/styles/sass/variables';
+@import './src/common/styles/sass/mixins';
 
 .link {
+    @include image(auto, center, no-repeat);
     width: 50px;
     height: 50px;
     background-color: $bgSecondColor;
     border-radius: 50%;
-    background-position: center;
-    background-repeat: no-repeat;
 
     &:hover {
         background-color: $primaryColor;
