--- a/src/skills/Skills.module.scss
+++ b/src/skills/Skills.module.scss
@@ -1,4 +1,5 @@
 @import './src/common/styles/sass/variables';
+@import './src/common/styles/sass/mixins';
 
 .skillsBlock {
     padding: 50px 0;
@@ -9,10 +10,8 @@
         justify-content: flex-start;
 
         .skills {
-            //border: 1px solid;
+            @include flex(flex, space-between);
             width: 100%;
-            display: flex;
-            justify-content: space-between;
             flex-wrap: wrap;
             margin-top: 30px;
             align-items: flex-start;
@@ -22,6 +21,3 @@
         }
     }
 }
-
-
-
